# worker-bindings

./: Cargo.toml  README.md
.github/workflows/: CI.yaml
example/: Cargo.toml  wrangler.toml
example/src/: lib.rs
src/: internal.rs  lib.rs
